--- a/app/index.html
+++ b/app/index.html
@@ -26,7 +26,7 @@
 
     <script id="times-template" type="text/x-handlebars-template">
         <div class="prediction" value="{{title}}" data-routetag="{{tag}}" data-dirtag="{{dirTag}}" data-vehicle="{{vehicle}}">
-            <a href="" class="favorite">&hearts;</a>
+            <span class="favorite">&hearts;</span>
             <p class="details">Bus {{vehicle}} to {{destination}} arrives in</p>
             <h4 class="minutes">{{minutes}} min</h2>
             <p class="time">at {{time}}</p>
@@ -60,20 +60,8 @@
     </main>
 
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-    <script src="scripts/jquery.xml.min.js"></script>
+    <script src="scripts/vendor/jquery.xml.min.js"></script>
     <script src="https://www.gstatic.com/firebasejs/4.1.5/firebase.js"></script>
-    <script>
-        // Initialize Firebase
-        var config = {
-            apiKey: "AIzaSyAkF_arn5No5F6gNhWBDwHOpxLQjaGJ66k",
-            authDomain: "bus-app-f7cdf.firebaseapp.com",
-            databaseURL: "https://bus-app-f7cdf.firebaseio.com",
-            projectId: "bus-app-f7cdf",
-            storageBucket: "",
-            messagingSenderId: "276731095903"
-        };
-        firebase.initializeApp(config);
-    </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.10/handlebars.min.js"></script>
 	<script src="scripts/main.js"></script>
 	
