--- a/app/index.html
+++ b/app/index.html
@@ -26,7 +26,7 @@
 
     <script id="times-template" type="text/x-handlebars-template">
         <div class="prediction" value="{{title}}" data-routetag="{{tag}}" data-dirtag="{{dirTag}}" data-vehicle="{{vehicle}}">
-            <span class="favorite">&hearts;</span>
+            <!-- <span class="favorite">&hearts;</span> -->
             <p class="details">Bus {{vehicle}} to {{destination}} arrives in</p>
             <h4 class="minutes">{{minutes}} min</h2>
             <p class="time">at {{time}}</p>
